Add tests for and fix bugs in SchemaHelpers